--- a/app/styles/sass/blocks/last-posts.scss
+++ b/app/styles/sass/blocks/last-posts.scss
@@ -52,7 +52,7 @@
       display: block;
       margin: auto;
       margin-bottom: 22px;
-      border-radius: 37px
+      border-radius: $border-radius;
     }
 
     &__date {
