--- a/app/styles/sass/blocks/banner.scss
+++ b/app/styles/sass/blocks/banner.scss
@@ -2,7 +2,7 @@
   background-position: center center;
   background-size: cover;
   color: #fff;
-  border-radius: 38px;
+  border-radius: $border-radius;
   padding: 30px;
   max-width: 100%;
   position: relative;
@@ -14,7 +14,7 @@
     background-color: #00000050;
     position: absolute;
     margin: -30px;
-    border-radius: 38px;
+    border-radius: $border-radius;
     z-index: 0;
   }
 
@@ -85,6 +85,16 @@
     display: flex;
     // gap: 20px;
     justify-content: space-between;
+
+    @media (max-width: 576px) {
+      width: 100vw;
+      max-width: 100vw;
+      transform: none;
+      margin: 0 -16px;
+      padding: 32px 16px 32px 0;
+      justify-content: center;
+      gap: 24px;
+    }
 
     &:before {
       content: none;
