--- a/app/styles/sass/blocks/products-carousel.scss
+++ b/app/styles/sass/blocks/products-carousel.scss
@@ -12,7 +12,7 @@
 
   &__item {
     border: 2px solid #000;
-    border-radius: 37px;
+    border-radius: $border-radius;
     margin: 0 20px;
     // max-width: 230px;
     text-align: center;
