--- a/app/styles/sass/blocks/nav-menu.scss
+++ b/app/styles/sass/blocks/nav-menu.scss
@@ -192,7 +192,7 @@
   .navmenu-list.opened {
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
   }
 
   .navmenu .menu-item {
