--- a/app/styles/sass/blocks/site-header.scss
+++ b/app/styles/sass/blocks/site-header.scss
@@ -153,19 +153,20 @@
   }
 
   &_bg {
-    background-image: url('../../../images/dist/cat-header-desktop.png');
+    background-image: url('../images/dist/cat-header-desktop.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: 100% 0;
 
     @media (max-width: 991px) {
-      background-image: url('../../../images/dist/cat-header-mobile.png');
+      background-image: url('../images/dist/cat-header-mobile.png');
     }
   }
 
   .searchform {
 
     position: relative;
+    max-width: 50%;
 
     button[type=submit],
     input[type=submit] {
@@ -176,7 +177,7 @@
       background: none;
 
       &:before {
-        content: url('../../../images/dist/search-desktop.svg');
+        content: url('../images/dist/search-desktop.svg');
       }
 
       @media(max-width: 991px) {
@@ -186,7 +187,7 @@
 
       @media(max-width: 991px) {
         &:before {
-          content: url('../../../images/dist/search-mobile.svg');
+          content: url('../images/dist/search-mobile.svg');
         }
       }
     }
@@ -194,6 +195,7 @@
     input[type=search] {
       padding-left: 50px;
       border: 0.8px solid #fff;
+      max-width: 100%;
 
       &::placeholder {
         color: #C9C9C9;
