--- a/app/styles/sass/blocks/site-header.scss
+++ b/app/styles/sass/blocks/site-header.scss
@@ -182,7 +182,8 @@
 
       @media(max-width: 991px) {
         top: 3px;
-        left: 6px;
+        // left: 6px;
+        left: 0;
       }
 
       @media(max-width: 991px) {
