--- a/app/styles/sass/blocks/home-footer.scss
+++ b/app/styles/sass/blocks/home-footer.scss
@@ -1,7 +1,7 @@
 .home-footer {
   height: 715px;
   position: relative;
-  background-image: url('../../../images/dist/ribbon.png');
+  background-image: url('../images/dist/ribbon-2.png');
   background-size: cover;
   background-repeat: no-repeat;
 
