--- a/app/styles/sass/_general.sass
+++ b/app/styles/sass/_general.sass
@@ -101,6 +101,8 @@ a.site-logo
     color: $accent
     font-size: 2rem
     transition: $transition opacity
+.slick-next
+  right: -15px
 
 .desktop-only,
 .mobile-only
