--- a/app/styles/sass/blocks/last-posts.scss
+++ b/app/styles/sass/blocks/last-posts.scss
@@ -1,12 +1,11 @@
 .last-posts {
-  // padding-top: 0;
   position: relative;
 
+  @media (max-width: 1100px) {
+    padding: 0 5vw;
+  }
+
   &:before {
-    // content: url('../images/dist/ribbon-1.png');
-    // position: absolute;
-    // top: -25%;
-    // z-index: -1;
     content: '';
     background-image: url('../images/dist/ribbon-1.png');
     background-size: cover;
@@ -47,21 +46,16 @@
   }
 
   &__wrapper {
-    // display: flex;
-    // justify-content: center;
-    // gap: 80px;
     max-width: 1100px;
     margin: auto;
 
-    @media (max-width: 1100px) {
-      margin-left: -16px;
-      margin-right: -16px;
-    }
+    // @media (max-width: 1100px) {
+    //   margin-left: -16px;
+    //   margin-right: -16px;
+    // }
   }
 
   &__item {
-    // width: 270px;
-    // max-width: 100%;
     margin: 0 40px;
     display: flex !important;
     flex-direction: column;
