--- a/app/styles/sass/blocks/products-carousel.scss
+++ b/app/styles/sass/blocks/products-carousel.scss
@@ -8,17 +8,28 @@
   &__wrapper {
     max-width: 1040px;
     margin: auto;
+
+    @media (max-width: 1100px) {
+      margin-left: -16px;
+      margin-right: -16px;
+    }
   }
 
   &__item {
     border: 2px solid #000;
     border-radius: $border-radius;
     margin: 0 20px;
-    // max-width: 230px;
     text-align: center;
     padding: 30px 36px;
-    // display: flex;
-    // align-items: flex-end;
+
+    @media (max-width: 991px) {
+      padding: 20px 10px;
+      margin: 0 10px;
+    }
+
+    // @media (max-width: 576px) {
+    //   padding: 10px 5px;
+    // }
 
     &__wrapper {
       height: 100%;
